--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   },
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1675466862",
-    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/hands": "^0.4.1675469240",
     "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-backend-webgl": "^4.20.0",
     "@tensorflow/tfjs-converter": "^4.20.0",
     "@tensorflow/tfjs-core": "^4.20.0",
     "bootstrap": "^5.3.3",
+    "iconify": "^1.4.0",
     "install": "^0.13.0",
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-tooltip": "^5.28.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@iconify/react": "^5.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
