--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.1",
     "react-speech-recognition": "^3.10.0",
     "react-tooltip": "^5.28.0",
